# task_on_nav_env

./: README.md  docker-compose.yml  env_registration1  env_registration2  jupyter.Dockerfile  jupyter.dockerfile  pyproject.toml  robot_server_test.ipynb  tameshi_env.ipynb  tameshibasyo.ipynb
.github/workflows/: main.yml  publish-image.yml
example/: SAC_CubeRoomSearchLikeContinuously.ipynb  pfrl_SAC.ipynb  test.ipynb
example/map_only_Env/: SearchCube_SAC.ipynb  SearchCube_multi_obs.ipynb  SearchCube_single_obs.ipynb  SearchCube_steady-start.ipynb  visualize.ipynb
mir_nav/: mir_nav.py  mir_nav_map.py  rs_state_util.py  utils.py
server_modules/robot_server/: client.py
server_modules/server_manager/: client.py
tameshi/: SAC_CubeRoomSearchLikeContinuously.ipynb  env_test.ipynb  pcg.ipynb  pfrl_tameshi.ipynb  robot_server_test.ipynb  search_env_test.ipynb  search_lc_env_test.ipynb  tameshi_env.ipynb  whatever.ipynb
tameshi/NLP/: SAC_CubeRoomSearchLikeContinuously.ipynb  SAC_CubeRoomSearch_PFRL.ipynb  torch_tameshi.ipynb
tameshi/topic/: pub.ipynb  sub.ipynb
tests/env/mir_nav/: test_cube_search.py  test_map_explore.py
