[tool.poetry]
name = "task_on_nav_env"
version = "0.1.0"
description = ""
authors = ["wwwshwww <www.shinderu.www@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
robo-gym = "^1.0.0"
gym = "^0.18.3"
matplotlib = "^3.4.2"
torch = "^1.8.1"
pfrl = "^0.2.1"
numpy-quaternion = "^2021.4.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
